editors/helix/tree-sitter-mcc/grammar.js
    source_file: ($) => seq(repeat($.import), repeat($._declaration)),

    annotation: ($) =>
      choice(
        prec.right(
          seq(
            field('name', $.annotation_name),
            optional(
              seq('(', commaSep(choice($.string, $.number, $.identifier)), ')'),
            ),
          ),
        ),
        // The `@asm fn` form: `@asm` is also an expression keyword, so it lexes
        // as its own token. Here it takes no `(...)` -- that is the expression.
        field('name', alias('@asm', $.annotation_name)),
      ),
    annotation_name: ($) => token(/@[A-Za-z_]\w*/),

    // ------------------------------------------------------------ declarations
    _declaration: ($) =>
      choice(
        $.struct_declaration,
        $.enum_declaration,
        $.type_alias,
        $.function_definition,
        $.function_prototype,
        $.global_variable,
        $.const_declaration,
        $.conditional,
        $.directive,
      ),

    // Compile-time diagnostic directives: `@static_assert(cond, "msg");`,
    // `@error("msg");`, `@warning("msg");`. Unlike annotations they stand
    // alone (ending in `;`) and take full constant expressions, so their
    // names lex as dedicated tokens, like `@if`/`@else` do.
    function_definition: ($) =>
      seq(
        repeat($.annotation),
        'fn',
        field('name', $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        optional(seq('->', field('return_type', $._type))),
        field('body', choice($.block, $.asm_block)),
      ),

    // A bodyless signature ending in `;`: an `@extern` declaration (C ABI) or
    // a plain prototype for a concrete mcc function defined in another object
    // (the form interface stubs emit). Same shape either way; the annotation
    // is what distinguishes them, and a highlighter need not.
    // A generic prototype is the `@removed` tombstone form: it never
    // instantiates, so it is the one generic that may go bodiless.
    parameter_list: ($) =>
      seq('(', commaSep(choice($.parameter, $.variadic_parameter)), ')'),

    parameter: ($) =>
      seq(
        // Per-parameter annotations stack (`@noalias @nonnull p: T*`).
        repeat($.annotation),
        optional(choice('const', 'mut')),
        field('name', $.identifier),
        ':',
        $._type,
      ),

    _type: ($) =>
      choice(
        $.const_type,
        $.pointer_type,
        $.array_type,
        $.function_type,
        $._type_name,
        $.grouped_type,
      ),

    // `const T` -- the read-only qualifier binding the whole following type
    // (the element of a slice<const T>, a const function-type parameter).
    type_arguments: ($) => seq('<', commaSep1($._type), '>'),

    // A `*` following a cast type is ambiguous: pointer star (`x as int32*`)
    // or multiplication (`x as uint64 * 4`). The compiler settles it by
    // lookahead (a `*` whose next token can begin an expression multiplies);
    // here the GLR parser explores both and the reading that survives wins.
    // When both survive (`x as T * *p`) the negative dynamic precedence makes
    // multiplication win, matching the compiler.
    function_type: ($) =>
      prec.right(
        seq(
          'fn',
          '(',
          commaSep(choice($._type, $.variadic_parameter)),
          ')',
          optional(seq('->', $._type)),
        ),
      ),

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.block,
        $.return_statement,
        $.emit_statement,
        $.let_statement,
        $.if_statement,
        $.case_statement,
        $.while_statement,
        $.break_statement,
        $.continue_statement,
        $.unreachable_statement,
        $.defer_statement,
        $.for_statement,
        $.conditional,
        $.assignment_statement,
        $.expression_statement,
      ),

    return_statement: ($) => seq('return', optional($._expression), ';'),
    emit_statement: ($) => seq('emit', $._expression, ';'),

    let_statement: ($) =>
      seq(
        'let',
        field('name', $.identifier),
        optional(seq(':', $._type)),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    if_statement: ($) =>
      prec.right(
        seq(
          'if',
          '(',
          field('condition', $._expression),
          ')',
          field('consequence', $._body),
          optional(seq('else', field('alternative', $._body))),
        ),
      ),

    _body: ($) => $._statement,

    expression_statement: ($) => seq($._expression, ';'),

    // -------------------------------------------------------------- expressions
    _expression: ($) =>
      choice(
        $.ternary_expression,
        $.logical_expression,
        $.binary_expression,
        $.cast_expression,
        $.unary_expression,
        $._postfix_expression,
      ),

    // `cond ? a : b`, the loosest operator and right-associative, so
    // `a ? b : c ? d : e` is `a ? b : (c ? d : e)`.
    ternary_expression: ($) =>
      prec.right(
        PREC.ternary,
        seq(
          field('condition', $._expression),
          '?',
          field('consequence', $._expression),
          ':',
          field('alternative', $._expression),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.equality, choice('==', '!=')],
        [PREC.relational, choice('<', '<=', '>', '>=')],
        [PREC.bitor, '|'],
        [PREC.bitxor, '^'],
        [PREC.bitand, '&'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.add, choice('+', '-')],
        [PREC.mul, choice('*', '/', '%')],
      ];
      return choice(
        ...table.map(([p, op]) =>
          prec.left(p, seq($._expression, field('operator', op), $._expression)),
        ),
      );
    },

    // No associativity: at `x as T . *` the cast's precedence ties with
    // pointer_type's and the declared conflict lets the GLR parser fork
    // (see pointer_type). Chained casts (`x as T as U`) stay unambiguous.
    unary_expression: ($) =>
      prec.right(PREC.unary, seq(field('operator', choice('-', '!', '*', '&', '~')), $._expression)),

    nonnull_assert_expression: ($) =>
      prec(PREC.postfix, seq(field('operand', $._expression), '!')),

    index_expression: ($) =>
      prec(PREC.postfix, seq(field('base', $._expression), '[', field('index', $._expression), ']')),

    member_expression: ($) =>
      prec(PREC.postfix, seq(field('base', $._expression), field('operator', choice('.', '->')), field('field', $.identifier))),

    call_expression: ($) =>
      prec(PREC.call, seq(field('function', $._expression), optional($.type_arguments), field('arguments', $.argument_list))),

    argument_list: ($) => seq('(', commaSep($._expression), ')'),

    identifier_expression: ($) => $.identifier,
    parenthesized_expression: ($) => seq('(', $._expression, ')'),
    block_expression: ($) => prec.dynamic(-1, seq('{', repeat($._statement), '}')),
    identifier: ($) => /[A-Za-z_]\w*/,

    number: ($) => token(choice(/0[xX][0-9a-fA-F]+/, /\d+/)),
    string: ($) => token(seq('"', repeat(choice(/[^"\\\n]/, /\\./)), '"')),
