editors/helix/tree-sitter-mcc/test/corpus/references.txt
================================================================================
reference parameter and reference return (&T)
================================================================================

fn buf_at(self: &struct buf, i: uint64) -> &char {
    return self.data![i];
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (reference_type
          (type_identifier)))
      (parameter
        (identifier)
        (type_identifier)))
    (reference_type
      (type_identifier))
    (block
      (return_statement
        (index_expression
          (nonnull_assert_expression
            (member_expression
              (identifier_expression
                (identifier))
              (identifier)))
          (identifier_expression
            (identifier)))))))

================================================================================
own return (-> own T)
================================================================================

fn take() -> own res {
    return make();
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (type_identifier)
    (block
      (return_statement
        (call_expression
          (identifier_expression
            (identifier))
          (argument_list))))))

================================================================================
own reference return (-> own &T)
================================================================================

fn view(r: &res) -> own &res {
    return r;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (reference_type
          (type_identifier))))
    (reference_type
      (type_identifier))
    (block
      (return_statement
        (identifier_expression
          (identifier))))))

================================================================================
reference marker in a function type (fn(&char) -> &int32)
================================================================================

fn apply(cb: fn(&char) -> &int32) {}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (function_type
          (reference_type
            (type_identifier))
          (reference_type
            (type_identifier)))))
    (block)))
